2007-05-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
	-asQPSubjectString:encoding]): simplified method.
	The headers indicates "utf-8" again thank to our fix in
	sope-mime.

	* SoObjects/SOGo/SOGoObject.m: fail to build if libFoundation is
	being used.

2007-05-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxObjectActions.m ([UIxObjectActions
	-removeUserFromAclsAction]): implemented this method which was
	missing and is required to remove users from ACLs.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-subscribeAction]): folderDict was not autoreleased, resulting in
	a leak...

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): when building with libFoundation, don't
	use the "propertyList" method from NSString. Rather, we convert
	the string to an NSData instance and passit as parameter to
	NSDeserializer. This way, we obtain a mutable dictionary rather
	than an immutable one.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject -bodyPartForText]) 
	([SOGoDraftObject -mimeMessageForContentWithHeaderMap:]): use the
	constant string "contentTypeValue".
	contentTypeValue is now set back to iso-8859-1 since NGMime
	converts extracts the data in that encoding.

2007-05-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): if a
	"bindFields" value is present in the user defaults, use the
	specified fields to find the dn of the user to bind.
	([LDAPSource -allEntryIDs]) 
	([LDAPSource -fetchContactsMatching:match]) 
	([LDAPSource -lookupContactEntry:entryID]) 
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]):
	bind and unbind the connection on each request.

	* UI/MailerUI/UIxMailAddressbook.m: removed obsolete module.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-contactSearchAction]): simplified method to use the facilities