@@ -38,6 +38,8 @@
 
 - (NSString *) davMethodToObjC;
 
+- (NSString *) stringByDetectingURLs;
+
 #ifndef GNUSTEP_BASE_LIBRARY
 - (BOOL) boolValue;
 #endif
