@@ -1,3 +1,9 @@
+2007-05-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/NSString+Utilities.m ([NSString
+	-stringByDetectingURLs]): this new method replaces passive URLS
+	with active ones for HTML resolution of the text.
+
 2007-05-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
